# hoi-yo

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  config.toml  hoi-yo.bat  pyproject.toml
.github/workflows/: build-macos.yml  build-windows.yml
personas/germany/: SOUL.md  config.toml
personas/italy/: SOUL.md  config.toml
personas/japan/: SOUL.md  config.toml
personas/modern_germany/: SOUL.md  config.toml
personas/modern_italy/: SOUL.md  config.toml
personas/modern_japan/: SOUL.md  config.toml
personas/modern_russia/: SOUL.md  config.toml
personas/modern_uk/: SOUL.md  config.toml
personas/modern_usa/: SOUL.md  config.toml
personas/soviet_union/: SOUL.md  config.toml
personas/soviet_union_alt_khrushchev/: SOUL.md  config.toml
personas/soviet_union_alt_rasputin/: SOUL.md  config.toml
personas/soviet_union_alt_trotsky/: SOUL.md  config.toml
personas/united_kingdom/: SOUL.md  config.toml
personas/usa/: SOUL.md  config.toml
scripts/: auto_shutdown.py  build_windows.py  install_hoi4.sh  observe.sh  record_demo.py  start_campaign.sh
src/: cli.py  config.py  interfaces.py  orchestrator.py
src/agents/: model_router.py  runner.py  schema.py
src/board_state/: builder.py  prompts.py
src/cloud/: auth.py  campaign_runner.py  database.py  lobby.py
src/dashboard/: server.py
terraform/: ec2.tf  iam.tf  main.tf  outputs.tf  security_groups.tf  ssm.tf  userdata.sh  variables.tf
tests/: test_board_state.py  test_cloud.py  test_dashboard.py  test_game.py  test_model_router.py  test_parser.py  test_personas.py  test_tts.py  test_writer.py
(+27 files in other folders)
